# osdu-spi-skills

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  THIRD-PARTY-NOTICES.txt  package-lock.json  package.json  plugin.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
agents/: build-runner.md  cimpl.md  osdu.md  qa-analyzer.md  qa-comparator.md  qa-reporter.md  qa-runner.md
docs/: README.md  astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/development/: adding-skills.md  contributing.md  releases.md  testing.md
docs/src/content/docs/getting-started/: first-session.md  installation.md  introduction.md  workspace-setup.md
docs/src/content/docs/platform/: apm.md  claude.md  copilot.md  cursor.md
docs/src/content/docs/system/: agents.md  architecture.md  commands.md  skills.md
examples/: README.md  copilot-setup-steps.yml
skills/dependencies/: SKILL.md
skills/health/: SKILL.md
skills/iac/: SKILL.md
skills/loop/: SKILL.md
skills/setup/: deps.json
tests/evals/triggers/: dependencies.json  loop.json
tests/scripts/: check_deps.py  compare_skill.py  run_trigger_eval.py  session_test.py  test_skill.py  validate.py
tests/unit/: test_validate.py
