[project]
name = "osdu-spi-skills"
version = "1.0.0"
description = "Unified AI agent skills for OSDU platform — deploys to Copilot, Claude, Cursor via APM"
authors = [{ name = "Daniel Scholl" }]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.3.0", "rich>=13.0.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
